--- a/package.json
+++ b/package.json
@@ -1,38 +1,23 @@
+
 {
-  "name": "vite-react-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
+  "name": "divergent-trading-bot",
+  "version": "1.0.0",
+  "description": "Divergent Trading Bot Platform (HPS Quad Divergence Strategy)",
+  "main": "server.mjs",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node server.mjs",
+    "dev": "NODE_ENV=development node server.mjs"
   },
   "dependencies": {
-    "better-sqlite3": "^12.2.0",
-    "ccxt": "^4.5.1",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "lucide-react": "^0.344.0",
-    "nanoid": "^5.1.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "better-sqlite3": "^9.4.3",
+    "ccxt": "^4.3.89",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nanoid": "^5.0.7"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
-  }
+  "engines": {
+    "node": ">=18.x"
+  },
+  "license": "MIT"
 }
